--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 		    <path fill="#5C4737" d="M1184.2 88.8c1.6-1.9 1.7.3 1.4 1.3-2.1 6.3-6.1 13.6-10.8 18.5-12.3 12.8-19.8 18.3-27.8 18.3-12.7 0-12.5-17.9-12.3-23-11.3 16.2-19.9 23-29.6 23-9.8 0-17.4-10.3-17.4-23.5 0-28.4 27.9-48.7 43.1-48.7 6.8 0 11.7 3.2 14.4 9.5l16.9-9.3h4.6l-7.3 24.2c-1.9 6.1-5.6 19.9-5.6 25 0 4.6 2 7.1 5.1 7.1 3.3 0 7.8-.1 14.5-9 1-1.4-13.9-1.9-6.3-3.8s14.2-6.4 17.1-9.6zm-75.6 12.5c0 5.9 3.2 10 7.8 10 12.2 0 22.8-26.2 22.8-40.1 0-6.1-2.9-9.8-7.6-9.8-12.2.1-23 26.1-23 39.9z"/>
 		  </g>
 		</svg>
-
   </div>
+
 	<div class="toprow">
 
 			<svg xmlns="http://www.w3.org/2000/svg" class="topspots unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3" width="335.8" height="371.1" viewBox="0 0 335.8 371.1">
@@ -121,13 +121,11 @@
 			  <circle fill="#FFF" cx="419.5" cy="44" r="1.9"/>
 			  <path fill="#7698CF" d="M389.2 57.1c-.9 4.9-1.6 27.6-10.1 26.7s-16.9-13.6-4.4-21.8c12.6-8.2 14.5-4.9 14.5-4.9z"/>
 			</svg>
-
-
   </div>
 
   <div class="midrow unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
   	<div class="midinfo">
-			<svg xmlns="http://www.w3.org/2000/svg" class="twomil unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2" width="490px" height="350px" viewBox="0 0 597.5 501">
+			<svg xmlns="http://www.w3.org/2000/svg" class="graph twomil unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2" width="490px" height="350px" viewBox="0 0 597.5 501">
 			  <g id="Layer_5">
 			    <text transform="translate(338.634 50.284)">
 			      <tspan x="0" y="0" fill="#2D4171" font-family="'HelveticaNeue-Bold'" font-size="18.102">Nova Scotia</tspan><tspan x="0" y="24.5" fill="#2D4171" font-family="'HelveticaNeue'" font-size="20.383">1.7%</tspan>
@@ -213,7 +211,7 @@
 			</svg>
 
 
-			<svg xmlns="http://www.w3.org/2000/svg" class="mvf unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3" width="500px" height="400px" viewBox="0 0 571.1 603.3">
+			<svg xmlns="http://www.w3.org/2000/svg" class="lakes mvf unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3" width="500px" height="400px" viewBox="0 0 571.1 603.3">
 			  <g id="Layer_5">
 			    <text fill="#D8EAF8" transform="translate(286.013 588.45)" font-family="'HelveticaNeue-CondensedBlack'" font-size="45.49">
 			      FEMALE
@@ -386,9 +384,6 @@
 		    </text>
 		  </g>
 		</svg>
-
-
-
 	</div>
 
 	<div class="footsandbar">
@@ -411,11 +406,9 @@
 		    </g>
 		  </g>
 		</svg>
-
-
   </div>
 
-  <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
   <script src="js/jquery.waypoints.min.js"></script>
   <script src="js/main.js"></script>
 </body>
