--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 <body>
 	<div class="topsandbar">
-
 		<svg xmlns="http://www.w3.org/2000/svg" class="header unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2" viewBox="0 0 1195.7 174.9">
 		  <g id="layer-5">
 		  	<g class="titlefishing">
@@ -38,6 +37,7 @@
 
 		  </g>
 		</svg>
+		<h1>Created by Evan Lefebvre</h1>
   </div>
 
 	<div class="toprow">
