--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
         </g>
       </g>
     </svg>
-    <h1>Created by Evan Lefebvre</h1>
+      <a href="http://evanthefive.com/">
+        <h1>Created by Evan Lefebvre</h1>
+      </a>
   </div>
   <div class="toprow">
     <svg xmlns="http://www.w3.org/2000/svg" class="topspots unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3" width="335.8" height="371.1" viewBox="0 0 335.8 371.1">
