--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </a>
   </div>
   <div class="toprow">
-    <a href=''>
+    <a href="">
       <svg xmlns="http://www.w3.org/2000/svg" id="bestspot" class="bestspot topspots unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3" width="335.8" height="371.1" viewBox="0 0 335.8 371.1">
         <g class="sectionwiggle" id="layer-301">
           <path class="st6 fishes" d="M169.9 353.3v7.5s9.7-14.1 20.8-3.7c-10.4 9-20.8-3.8-20.8-3.8zm0-34.5v7.5s9.7-14.1 20.8-3.7c-10.4 9-20.8-3.8-20.8-3.8zm0-34.5v7.5s9.7-14.1 20.8-3.7c-10.4 9-20.8-3.8-20.8-3.8zm0-36.8v7.5s9.7-14.1 20.8-3.7c-10.4 9-20.8-3.8-20.8-3.8zm0-33.5v7.5s9.7-14.1 20.8-3.7c-10.4 9-20.8-3.8-20.8-3.8zm0-34.9v7.5s9.7-14.1 20.8-3.7c-10.4 9-20.8-3.8-20.8-3.8zm0-33.2v7.5s9.7-14.1 20.8-3.7c-10.4 9-20.8-3.8-20.8-3.8zm0-35.7v7.5s9.7-14.1 20.8-3.7c-10.4 9-20.8-3.8-20.8-3.8zm0-33.4v7.5s9.7-14.1 20.8-3.7c-10.4 9-20.8-3.8-20.8-3.8zm0-33.4v7.5s9.7-14.1 20.8-3.7c-10.4 9-20.8-3.8-20.8-3.8z"/>
